policies/tests/disallow-privileged/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-container
spec:
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: privileged-init
spec:
  initContainers:
    - name: init
      image: busybox:1.36
      securityContext:
        privileged: true
  containers:
    - name: app
      image: nginx:1.27
---
apiVersion: v1
kind: Pod
metadata:
  name: compliant
spec:
  containers:
    - name: app
      image: nginx:1.27
