policies/tests/disallow-privileged/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1
kind: Test
metadata:
  name: disallow-privileged
policies:
  - ../../disallow-privileged.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-privileged
    rule: deny-privileged-container
    resources:
      - privileged-container
    kind: Pod
    result: fail
  - policy: disallow-privileged
    rule: deny-privileged-init
    resources:
      - privileged-init
    result: fail
  - policy: disallow-privileged
    rule: allow-not-privileged
    resources:
      - compliant
    result: pass
